Bug 1311044 - show error when connection to domain socket is failed; r=bagder

MozReview-Commit-ID: GtqKiMVwQyX

--HG--
extra : rebase_source : 04e3b258f06e7d3e196c241c96aa3cc92ec334da